# pisckipy-lab

./: .gitignore  README.md  dump.rdb  pyproject.toml  shell.nix
