[project]
name = "belajar_python_batch2"
version = "0.1.0"
description = "Belajar Python High Performance"
authors = [
    {name = "Piscki Pratama", email = "pisckipratama@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
